update template tags

--- a/tcn/ui/templates/ui/articles/list.html
+++ b/tcn/ui/templates/ui/articles/list.html
@@ -52,7 +52,7 @@
         <main class="card-body items-center">
           <i data-lucide="info" class="mx-auto size-1/4 text-primary"></i>
           <h2 class="card-title text-primary">{% trans 'No articles' %}</h2>
-          <p>{% trans 'Published blog articles will appear here' %}</p>
+          <p>{% trans 'Published news articles will appear here' %}</p>
         </main>
       </article>
     </li>
