--- a/tcn/ui/templates/ui/components/form.html
+++ b/tcn/ui/templates/ui/components/form.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<section class="grid gap-8">
+<section class="container mx-auto max-w-xl grid gap-8">
   {% if form.errors %}
   <div class="toast toast-top toast-end top-24 right-8 z-10">
     <ol class="grid gap-4 max-w-2xl mx-auto">
