add archive views

--- a/tcn/ui/static/ui/css/app.css
+++ b/tcn/ui/static/ui/css/app.css
@@ -20,7 +20,7 @@
 
 
 @plugin "daisyui" {
-  themes: caramellatte --default, luxury --prefersdark, silk;
+  themes: luxury --default;
 }
 
 @layer base {
