--- a/tcn/ui/templates/rest_framework/api.html
+++ b/tcn/ui/templates/rest_framework/api.html
@@ -38,7 +38,10 @@
       <div
         class="bg-primary rounded-field text-primary-content absolute inset-0 size-full flex rotate-45 items-center justify-center"
       >
-        <i data-lucide="feather" class="-rotate-45 lg:size-8 2xl:size-10"></i>
+        <i
+          data-lucide="scroll-text"
+          class="-rotate-45 lg:size-8 2xl:size-10"
+        ></i>
       </div>
       <span class="sr-only"> {% trans 'The Certain News | API' %} </span>
     </a>
