--- a/tcn/ui/templates/registration/password_reset_done.html
+++ b/tcn/ui/templates/registration/password_reset_done.html
@@ -20,7 +20,7 @@
               class="bg-primary rounded-field text-primary-content absolute inset-0 size-full flex rotate-45 items-center justify-center"
             >
               <i
-                data-lucide="feather"
+                data-lucide="scroll-text"
                 class="-rotate-45 lg:size-8 2xl:size-10"
               ></i>
             </div>
