--- a/tcn/ui/templates/ui/base.html
+++ b/tcn/ui/templates/ui/base.html
@@ -177,14 +177,14 @@
 
                   <li
                     class="tooltip tooltip-right rtl:tooltip-left tooltip-primary aspect-square"
-                    data-tip="{% trans 'Now' %}"
+                    data-tip="{% trans 'Latest news' %}"
                   >
                     <a
                       href="{% url 'ui:articles' %}"
                       class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
                     >
                       <i data-lucide="clock-fading" class="size-4 md:size-6"></i>
-                      <span class="sr-only">{% trans 'Now' %}</span>
+                      <span class="sr-only">{% trans 'Latest news' %}</span>
                     </a>
                   </li>
 
@@ -807,8 +807,8 @@
                   href="{% url 'ui:articles' %}"
                   class="btn btn-sm btn-ghost btn-primary md:btn-md btn-block 2xl:btn-xl justify-start"
                 >
-                  <i data-lucide="timer" class="size-4 md:size-6"></i>
-                  <span>{% trans 'Now' %}</span>
+                  <i data-lucide="clock-fading" class="size-4 md:size-6"></i>
+                  <span>{% trans 'Latest news' %}</span>
                 </a>
               </li>
 
