--- a/tcn/ui/templates/ui/articles/id.html
+++ b/tcn/ui/templates/ui/articles/id.html
@@ -204,7 +204,7 @@
   <div
     class="prose mx-auto max-w-none prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full prose-pre:bg-base-200 prose-pre:border prose-pre:border-base-300"
   >
-    {% image article.image scale-100 %}
+    {% image article.image fill-1920x1080 %}
     <p class="lead">{{ article.headline }}</p>
     {{ article.content }}
   </div>
